PyMaker/datas/object2/RawHTML/i3201/Python_DOC_referPages.missing-parentheses-in-call-to-print.txt
<div class="post-text" itemprop="text">
<p>A small game that guesses numbers, but there are the following errors in pycharm, opening with IDLE is no problem. May I ask what is the reason?</p>
<pre><code>#guess number
import random  #use import function convert  random module
num = random.randint(0,11)  #create random int
temp =  input ('Please type you guess number: ')  #type random str
guess = int (temp) #temp convert to int, if the str is decimal could use int(float(temp)) transfer
while guess != num: #while loop
    print ("Sorry! You are wrong.")
    temp = input ('Please type the number again: ')
    guess = int (temp)
    if guess == num:
        print ('Amazing!')
    else:
        if guess &gt; num:
            print ("The number is high.")
        else :
            print ('The number is low.')
print ('Congragulation!')


D:\Anaconda\python.exe "C:/Users/Sky Talk/PycharmProjects/untitled/Key"
  File "C:/Users/Sky Talk/PycharmProjects/untitled/Key", line 7
    print "dict['name']:",dict['name']
                        ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("dict['name']:",dict['name'])?

Process finished with exit code 1
</code></pre>
<p><a href="https://i.stack.imgur.com/PdZGu.png" rel="nofollow noreferrer">code screenshot</a></p>
<p><a href="https://i.stack.imgur.com/LR3FB.png" rel="nofollow noreferrer">error message</a></p>
<p><a href="https://i.stack.imgur.com/WxUxl.png" rel="nofollow noreferrer">terminal screenshot</a></p>
</div>
<div class="post-text" itemprop="text">
<p>Print(words) is a command that accepts parameters. When you use the print function, you have to use the parenthesis, or you will get an error. Use the suggestion that the error message gave you:</p>
<p><code>print("dict['name']:",dict['name'])</code></p>
</div>
<span class="comment-copy">Code should <i>not</i> be posted as an image.  Please post it as text, in your question</span>
<span class="comment-copy">Please <a href="http://idownvotedbecau.se/imageofanexception/" rel="nofollow noreferrer">do not post errors as images</a>.</span>
<span class="comment-copy">@IonicSolutions@user3483203 Thanks your help. I have update the problems, if you have any method, please tell me. Thank a lot.</span>
<span class="comment-copy">The problem is exactly what is stated: There are no parenthese for <code>print</code>. Note that starting with Python 3, <a href="https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function" rel="nofollow noreferrer"><code>print</code> is a function</a>. Your code was likely written for Python 2.7 and you are trying to run it with Python 3.x</span>
<span class="comment-copy">@IonicSolutions  Thanks for your help. My code is written in Python 3, and it is also parentheses after the print. Why is it still being reported?</span>
